# llm_weather_app

./: .gitignore  ARCHITECTURE_DESIGN_DOCUMENT.md  FRONTEND_ARCHITECTURE_DESIGN_DOCUMENT.md  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 891ba074292a_initial_schema_locations_weather_.py
apps/api/app/: dependencies.py  exceptions.py  main.py
apps/api/app/core/: cache.py  config.py  database.py  logging.py
apps/api/app/models/: __init__.py  daily_reading.py  location.py  weather_record.py
apps/api/app/repositories/: __init__.py  weather_repository.py
apps/api/app/routers/: __init__.py  briefing.py  export.py  media.py  meta.py  records.py  weather.py
apps/api/app/schemas/: __init__.py  briefing.py  error.py  media.py  meta.py  records.py  weather.py
apps/api/app/services/: __init__.py  briefing_service.py  export_service.py  geocoding.py  places.py  weather_provider.py  youtube.py
apps/api/tests/: briefing_mock.py  conftest.py  media_mock.py  owm_mock.py  test_briefing_router.py  test_briefing_service.py  test_cache.py  test_database.py  test_exceptions.py  test_export_router.py  test_export_service.py  test_geocoding.py  test_health.py  test_media_router.py  test_meta_router.py  test_models.py  test_places.py  test_records_router.py  test_schemas.py  test_weather_provider.py  test_weather_repository.py  test_weather_router.py  test_youtube.py
apps/web/: .dockerignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/records/: page.tsx
apps/web/app/records/[id]/: page.tsx
apps/web/components/: aqi-badge.tsx  connection-indicator.tsx  date-range-fields.tsx  delete-record-dialog.tsx  providers.tsx  save-record-dialog.tsx  site-footer.tsx  site-header.tsx  sky-background.tsx  ui-states.tsx  unit-toggle.tsx  weather-icon.tsx
apps/web/components/home/: current-weather-card.tsx  forecast-strip.tsx  home-view.tsx
apps/web/components/records/: briefing-panel.tsx  edit-record-dialog.tsx  export-menu.tsx  media-panel.tsx  record-card.tsx  record-detail-view.tsx  records-view.tsx  temperature-chart.tsx
apps/web/lib/: api.ts  types.ts  units-context.tsx  weather.ts
