[project]
name = "weather-app-api"
version = "0.1.0"
description = "Weather App backend (FastAPI) for the PM Accelerator assessment"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cachetools>=7.1.4",
    "fastapi>=0.137.1",
    "fpdf2>=2.8.7",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are called in argument defaults by
# design; they are effectively immutable, so B008 should not flag them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]
